p2/confs/dep1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-one
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: hello-one
  template:
    metadata:
      labels:
        app: hello-one
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
